Ensure error message does not overflow the container

--- a/assets/src/components/error-screen/style.css
+++ b/assets/src/components/error-screen/style.css
@@ -30,6 +30,7 @@
 	font-family: var(--font-noto);
 	font-size: 1rem;
 	line-height: 1.5;
+	word-break: break-word;
 }
 
 .error-screen pre {
